--- a/test/html/components.html
+++ b/test/html/components.html
@@ -72,7 +72,7 @@
                                                 <div class="element symbol">type</div></div>
                                             <div class="colon">:</div>
                                             <div class="value">
-                                                <div class="element name"><a href="https://bali-nebula.net/repository/names/bali/collections/Set/v1">/bali/collections/Set/v1</a></div>
+                                                <div class="element name"><a href="https://bali-nebula.net/repository/names/nebula/collections/Set/v1">/nebula/collections/Set/v1</a></div>
                                             </div>
                                         </div>
                                     </div>
@@ -368,7 +368,7 @@
                                     </div>
                                     <div class="colon">:</div>
                                     <div class="value">
-                                        <a class="element resource" href="https://bali-nebula.net/bali/examples">bali-nebula.net/bali/examples?foo=5&bar=false</a>
+                                        <a class="element resource" href="https://bali-nebula.net/nebula/examples">bali-nebula.net/nebula/examples?foo=5&bar=false</a>
                                     </div>
                                 </div>
                                 <div class="association">
@@ -449,7 +449,7 @@
                                                     <div class="element symbol">type</div></div>
                                                 <div class="colon">:</div>
                                                 <div class="value">
-                                                    <div class="element name"><a href="https://bali-nebula.net/repository/names/bali/collections/Queue/v1">/bali/collections/Queue/v1</a></div>
+                                                    <div class="element name"><a href="https://bali-nebula.net/repository/names/nebula/collections/Queue/v1">/nebula/collections/Queue/v1</a></div>
                                                 </div>
                                             </div>
                                         </div>
@@ -532,7 +532,7 @@
     } else {
         throw exception
     }
-} (condition: /bali/elements/Boolean/v1)</pre>
+} (condition: /nebula/elements/Boolean/v1)</pre>
                                     </div>
                                 </div>
                             </div>
@@ -640,22 +640,22 @@ DW411WRC0YS71NWKA93S
                             <div class="list">
                                 <div class="type">List</div>
                                 <div class="item">
-                                    <div class="range"><div class="element number">-3</div>..<div class="element number">5</div></div>
+                                    <div class="range">[<div class="element number">-3</div>..<div class="element number">5</div>]</div>
                                 </div>
                                 <div class="item">
-                                    <div class="range"><div class="element number">π</div>&lt;..<div class="element number">τ</div></div>
+                                    <div class="range">[<div class="element number">π</div>&lt;..<div class="element number">τ</div>]</div>
                                 </div>
                                 <div class="item">
-                                    <div class="range"><div class="element number">0</div>..&lt;</div>
+                                    <div class="range">[<div class="element number">0</div>..&lt;<div class="element number"> </div>]</div>
                                 </div>
                                 <div class="item">
-                                    <div class="range">..&lt;<div class="element number">-1</div></div>
+                                    <div class="range">[<div class="element number"> </div>..&lt;<div class="element number">-1</div>]</div>
                                 </div>
                                 <div class="item">
-                                    <div class="range">&lt;..&lt;</div>
+                                    <div class="range">[<div class="element number"> </div>&lt;..&lt;<div class="element number"> </div>]</div>
                                 </div>
                                 <div class="item">
-                                    <div class="range">..</div>
+                                    <div class="range">[<div class="element number"> </div>..<div class="element number"> </div>]</div>
                                 </div>
                             </div>
                         </div>
