Updated the package version to v2.70.0.

--- a/test/html/agents.html
+++ b/test/html/agents.html
@@ -112,17 +112,16 @@
                                                         <div class="item">
                                                             <pre class="element text">
 "
-    Error: Raw error...
-    at Context.&lt;anonymous> (/Users/derk/Develo..-framework/test/TestAngle.js:22:91)
-    at callFn (/Users/derk/Development/craterd..dules/mocha/lib/runnable.js:366:21)
-    at Test.Runnable.run (/Users/derk/Developm..odules/mocha/lib/runnable.js:354:5)
-    at Runner.runTest (/Users/derk/Development..modules/mocha/lib/runner.js:681:10)
-    at /Users/derk/Development/craterdog-bali/.._modules/mocha/lib/runner.js:804:12
-    at next (/Users/derk/Development/craterdog..modules/mocha/lib/runner.js:596:14)
-    at /Users/derk/Development/craterdog-bali/..e_modules/mocha/lib/runner.js:606:7
-    at next (/Users/derk/Development/craterdog..modules/mocha/lib/runner.js:489:14)
-    at Immediate._onImmediate (/Users/derk/Dev.._modules/mocha/lib/runner.js:574:5)
-    at processImmediate (node:internal/timers:464:21)
+    at REPL32:1:79
+    at Script.runInThisContext (node:vm:129:12)
+    at REPLServer.defaultEval (node:repl:522:29)
+    at bound (node:domain:416:15)
+    at REPLServer.runBound [as eval] (node:domain:427:12)
+    at REPLServer.onLine (node:repl:849:10)
+    at REPLServer.emit (node:events:406:35)
+    at REPLServer.emit (node:domain:470:12)
+    at REPLServer.Interface._onLine (node:readline:487:10)
+    at REPLServer.Interface._line (node:readline:852:8)
 "</pre>
                                                         </div>
                                                     </div>
