--- a/test/html/components.html
+++ b/test/html/components.html
@@ -99,7 +99,7 @@
                                             <div class="element symbol">symbol</div>
                                         </div>
                                         <div class="item">
-                                            <div class="element symbol">reserved-5</div>
+                                            <div class="element reserved">reserved-5</div>
                                         </div>
                                         <div class="item">
                                             <div class="element duration">3Y2M1D</div>
@@ -214,7 +214,7 @@
                                 <div class="type">Catalog</div>
                                 <div class="association">
                                     <div class="key" style="width:35ch">
-                                        <div class="element symbol">a-1</div>
+                                        <div class="element reserved">a-1</div>
                                     </div>
                                     <div class="colon">:</div>
                                     <div class="value">
@@ -224,7 +224,7 @@
                                 </div>
                                 <div class="association">
                                     <div class="key" style="width:35ch">
-                                        <div class="element symbol">b-2</div>
+                                        <div class="element reserved">b-2</div>
                                     </div>
                                     <div class="colon">:</div>
                                     <div class="value">
@@ -234,7 +234,7 @@
                                 </div>
                                 <div class="association">
                                     <div class="key" style="width:35ch">
-                                        <div class="element symbol">c-3</div>
+                                        <div class="element reserved">c-3</div>
                                     </div>
                                     <div class="colon">:</div>
                                     <div class="value">
