Fixed a bug in the Queue, Set and Stack collections where any additional parameterizations were being stripped off.

--- a/test/html/components.html
+++ b/test/html/components.html
@@ -72,7 +72,7 @@
                                                 <div class="element symbol">type</div></div>
                                             <div class="colon">:</div>
                                             <div class="value">
-                                                <div class="element name"><a href="https://bali-nebula.net/repository/names/nebula/collections/Set/v1">/nebula/collections/Set/v1</a></div>
+                                                <div class="element name"><a href="https://bali-nebula.net/repository/names/nebula/collections/Set/v1">/nebula/collections/Set/v1</a> (ItemType: /nebula/strings/Symbol/v1)</div>
                                             </div>
                                         </div>
                                     </div>
