--- a/test/html/test.html
+++ b/test/html/test.html
@@ -6,6 +6,7 @@
     <body>
         <div class="document">
             <div class="value">
+        <div class="title">TITLE</div>
                 <div class="catalog">
                     <div class="type">Catalog</div>
                     <div class="association">
