Adjusted the HTML formatting for binary strings.

--- a/test/html/components.html
+++ b/test/html/components.html
@@ -82,7 +82,7 @@
                                     <div class="list">
                                         <div class="type">List</div>
                                         <div class="item">
-                                            target
+                                            <pre class="element code">target</pre>
                                         </div>
                                         <div class="item">
                                             <div class="element pattern">any</div>
@@ -122,7 +122,7 @@
 "</pre>
                                         </div>
                                         <div class="item">
-                                            <pre class="element binary">0110101101010001 (encoding: base02)</pre>
+                                            <pre class="element binary">0110101101010001(encoding: base02)</pre>
                                         </div>
                                         <div class="item">
                                             <div class="element probability">.5</div>
@@ -398,7 +398,7 @@
                                     </div>
                                     <div class="colon">:</div>
                                     <div class="value">
-                                        <pre class="element binary">0111010110101100100011 (encoding: base16)</pre>
+                                        <pre class="element binary">0111010110101100100011(encoding: base16)</pre>
                                     </div>
                                 </div>
                                 <div class="association">
@@ -578,19 +578,19 @@
                             <div class="list">
                                 <div class="type">List</div>
                                 <div class="item">
-                                    <pre class="element binary"> (encoding: base02)</pre>
+                                    <pre class="element binary">(encoding: base02)</pre>
                                 </div>
                                 <div class="item">
                                     <pre class="element binary">
 001011011001110101000001010011111011110100110111000111100000
 00000100011001001101
- (encoding: base16)</pre>
+(encoding: base16)</pre>
                                 </div>
                                 <div class="item">
                                     <pre class="element binary">
 C3393B1543ACD32429A15D22A557C42DDD227DDDDA69D9CD55A7923D214A
 49D8A9C1AAC975C02B58
- (encoding: base32)</pre>
+</pre>
                                 </div>
                                 <div class="item">
                                     <pre class="element binary">
@@ -598,13 +598,13 @@ C3393B1543ACD32429A15D22A557C42DDD227DDDDA69D9CD55A7923D214A
 45ADAEB3DC84737D6021CC0DB3E13EFDC90DBF4917172BA27E426FA6398A
 790CE723DB70712361EDDF7DAEE5EDB706CA1A631DBCD80988E98171E166
 C8BF8D3BE0E97F6E655105E74D96F9F86026504B752854B9316D0AB8263A
- (encoding: base16)</pre>
+(encoding: base16)</pre>
                                 </div>
                                 <div class="item">
                                     <pre class="element binary">
 234VDR3AFBR3N596XPHCZL7HNL2NX9FTV858QH33QQR62GP176PW7DAKCB1H
 DW411WRC0YS71NWKA93S
- (encoding: base64)</pre>
+(encoding: base64)</pre>
                                 </div>
                             </div>
                         </div>
