Added test ranges that include the ∞ symbol.

--- a/test/html/components.html
+++ b/test/html/components.html
@@ -650,13 +650,25 @@ DW411WRC0YS71NWKA93S
                                     <div class="range">[<div class="element number">0</div>..&lt;<div class="element number"> </div>]</div>
                                 </div>
                                 <div class="item">
+                                    <div class="range">[<div class="element number">0</div>..&lt;<div class="element number">∞</div>]</div>
+                                </div>
+                                <div class="item">
                                     <div class="range">[<div class="element number"> </div>..&lt;<div class="element number">-1</div>]</div>
+                                </div>
+                                <div class="item">
+                                    <div class="range">[<pre class="element code">-∞</pre>..&lt;<div class="element number">-1</div>]</div>
                                 </div>
                                 <div class="item">
                                     <div class="range">[<div class="element number"> </div>&lt;..&lt;<div class="element number"> </div>]</div>
                                 </div>
                                 <div class="item">
+                                    <div class="range">[<pre class="element code">-∞</pre>&lt;..&lt;<div class="element number">∞</div>]</div>
+                                </div>
+                                <div class="item">
                                     <div class="range">[<div class="element number"> </div>..<div class="element number"> </div>]</div>
+                                </div>
+                                <div class="item">
+                                    <div class="range">[<pre class="element code">-∞</pre>..<div class="element number">∞</div>]</div>
                                 </div>
                             </div>
                         </div>
