Moved the comparator parameter out of the sorter constructor and into the sortCollection() method.

--- a/test/html/agents.html
+++ b/test/html/agents.html
@@ -167,18 +167,7 @@
                         </div>
                         <div class="colon">:</div>
                         <div class="value">
-                            <div class="catalog">
-                                <div class="type">MergeSorter</div>
-                                <div class="association">
-                                    <div class="key">
-                                        <div class="element symbol">comparator</div>
-                                    </div>
-                                    <div class="colon">:</div>
-                                    <div class="value">
-                                        <div class="element symbol">CanonicalComparator</div>
-                                    </div>
-                                </div>
-                            </div>
+                            <div class="element symbol">MergeSorter</div>
                         </div>
                     </div>
                     <div class="association">
