Replaced moment.js dependency with native date, time and duration implementations.

--- a/test/html/components.html
+++ b/test/html/components.html
@@ -103,7 +103,7 @@
                                             <div class="element reserved">reserved-5</div>
                                         </div>
                                         <div class="item">
-                                            <div class="element duration">3Y2M1D</div>
+                                            <div class="element duration">P3Y2M1D</div>
                                         </div>
                                         <div class="item">
                                             <div class="element moment">2017-07-04</div>
@@ -347,11 +347,11 @@
                                 </div>
                                 <div class="association">
                                     <div class="key" style="width:35ch">
-                                        <div class="element duration">0D</div>
+                                        <div class="element duration">P0D</div>
                                     </div>
                                     <div class="colon">:</div>
                                     <div class="value">
-                                        <div class="element duration">1Y3M24D7H32M15S</div>
+                                        <div class="element duration">P1Y3M24D7H32M15S</div>
                                     </div>
                                 </div>
                                 <div class="association">
@@ -618,7 +618,7 @@ DW411WRC0YS71NWKA93S
                             <div class="list">
                                 <div class="type">List</div>
                                 <div class="item">
-                                    <div class="element moment">-10000-01-01 00:00:00 (country: "Atlantis")</div>
+                                    <div class="element moment">1000 (country: "Atlantis")</div>
                                 </div>
                                 <div class="item">
                                     <div class="element moment">1962-04-01 (city: "New York City")</div>
@@ -627,7 +627,7 @@ DW411WRC0YS71NWKA93S
                                     <div class="element moment">1962-04-01 06:31 (city: "San Francisco")</div>
                                 </div>
                                 <div class="item">
-                                    <div class="element moment">1962-04-01 06:31:60.726 (city: "Denver", region: "Colorado", country: "USA")</div>
+                                    <div class="element moment">1962-04-01 06:31:59.726 (city: "Denver", region: "Colorado", country: "USA")</div>
                                 </div>
                             </div>
                         </div>
