--- a/test/html/components.html
+++ b/test/html/components.html
@@ -117,9 +117,11 @@
                                         <div class="item">
                                             <pre class="element text">
 "
-    multiline
-    text
-"</pre>
+    nested "
+        multiline
+        text
+"
+    "</pre>
                                         </div>
                                         <div class="item">
                                             <pre class="element binary">0110101101010001(encoding: base02)</pre>
