Added more test cases for text strings.

--- a/test/html/components.html
+++ b/test/html/components.html
@@ -613,6 +613,37 @@ DW411WRC0YS71NWKA93S
                     </div>
                     <div class="association">
                         <div class="key" style="width:12ch">
+                            <div class="element symbol">texts</div>
+                        </div>
+                        <div class="colon">:</div>
+                        <div class="value">
+                            <div class="list">
+                                <div class="type">List</div>
+                                <div class="item">
+                                    <pre class="element text">
+"simple"</pre>
+                                </div>
+                                <div class="item">
+                                    <pre class="element text">
+"This is a sentence."</pre>
+                                </div>
+                                <div class="item">
+                                    <pre class="element text">
+"This contains a \"quoted\" word."</pre>
+                                </div>
+                                <div class="item">
+                                    <pre class="element text">
+"This contains a \n new line character."</pre>
+                                </div>
+                                <div class="item">
+                                    <pre class="element text">
+"This contains a {procedure}."</pre>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="association">
+                        <div class="key" style="width:12ch">
                             <div class="element symbol">moments</div>
                         </div>
                         <div class="colon">:</div>
