Fixed a problem with the parsing of narratives.

--- a/test/html/components.html
+++ b/test/html/components.html
@@ -117,10 +117,11 @@
                                         <div class="item">
                                             <pre class="element text">
 "
-    nested "
+"
+        nested
         multiline
         text
-"
+    "
     "</pre>
                                         </div>
                                         <div class="item">
